Shanoir-NG - Use Sonar - Correct sonarLint warnings in import MS